shifter/output/Ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: nginx
          servicePort: nginx
        path: /
status:
  loadBalancer: {}
